--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tutors">
         <activity
-            android:name=".Activity.SearchActivity"
-            android:exported="false" />
+            android:name=".Activity.ProfileEditorActivity"
+            android:exported="true" />
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.GoogleSignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
