--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ apply plugin: 'com.google.gms.google-services'
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\University\\Tutors\\keystore\\keystore.jks')
-            storePassword 'NikitaPidor'
-            keyPassword 'NikitaPidor'
+            storeFile file('C:\\Users\\nikita\\kv\\keystore.jks')
+            storePassword '111111'
+            keyPassword '111111'
             keyAlias 'key0'
         }
     }
@@ -23,6 +23,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
     }
 
     buildTypes {
