--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tutors">
         <activity
+            android:name=".Activity.TutorPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ProfileEditorActivity"
             android:exported="true" />
         <activity
@@ -26,7 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
