--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tutors">
         <activity
+            android:name=".Activity.BookLeassonActivity"
+            android:exported="true" />
+        <activity
             android:name=".Activity.StudentLessonActivity"
             android:exported="false" />
         <activity
